# capsula-tempo

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  quick_test.py  requirements.txt  test_google_drive.py  test_multiple_files.py  test_permissions.py
templates/: upload.html
